server-client 연결

--- a/parse-server-example/.ebextensions/app.config
+++ b/parse-server-example/.ebextensions/app.config
@@ -1,10 +1,10 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
     PARSE_MOUNT: "/parse"
-    APP_ID: "ReplaceWithAppID"
-    MASTER_KEY: "ReplaceWithMasterKey"
-    DATABASE_URI: "ReplaceWithDatabaseURI"
+    APP_ID: "a814j91hsofa83hi01"
+    MASTER_KEY: "18hosf0u3joadosdfio20ajohf02h34"
+    DATABASE_URI: "mongodb://user1:asdf@ds119020.mlab.com:19020/daily_saying"
     NODE_ENV: "production"
-    SERVER_URL: "http://myappname.elasticbeanstalk.com/parse"
+    SERVER_URL: "http://dailysaying.elasticbeanstalk.com/parse"
   aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm start"
